@@ -25,20 +25,20 @@ AM_CXXFLAGS = $(APPS_CXXFLAGS)
 
 noinst_HEADERS = chain.hh io.hh influence_zones.hh
 
-noinst_PROGRAMS = image2d graph complex classif
+noinst_PROGRAMS = image2d graph complex classif-1complex
 image2d_SOURCES = image2d.cc
 graph_SOURCES = graph.cc
 complex_SOURCES = complex.cc
 # This example has been shown in the ISMM 2009 presentation only (not
 # in the paper).
-classif_SOURCES = classif.cc
+classif_1complex_SOURCES = classif-1complex.cc
 
 # Input images.
 # FIXME: Move them to milena/img/?
 dist_noinst_DATA = seeds.pgm m283-c.off classseedsi.pbm
 
 # Output images.
-noinst_DATA = lena-s.ppm graph-s.png m283-s.off classwst.pnm
+noinst_DATA = lena-s.ppm graph-s.png m283-s.off classwst-1complex.ppm
 MOSTLYCLEANFILES = $(noinst_DATA) graph-s.neato
 
 # FIXME: Also generate intermediate images (gradients, etc.).
@@ -54,6 +54,5 @@ graph-s.neato: seeds.pgm graph$(EXEEXT)
 m283-s.off: m283-c.off complex$(EXEEXT)
 	./complex$(EXEEXT) $< 100 $@
 
-# FIXME: Adjust the lambda parameter.
-classwst.pnm: classseedsi.pbm classif$(EXEEXT)
-	./classif$(EXEEXT) $< 4 $@
+classwst-1complex.ppm: classseedsi.pbm classif-1complex$(EXEEXT)
+	./classif-1complex$(EXEEXT) $< 4 $@
